4897: Price range bar
- Implement price range filtering with victor's design feedback
- Cleanup `HotelFilterViewModel` names and dataflow a little. Reduced global state.
- Update to support 23.1.0, RangeSeekBar was forcing 23.1.0 to be selected anyways
- Due to the update to 23.1.0 I needed to remove the white check mark icons
  from the xml. They are unnecessary anyways because we always override them.
- Had to change the drawables used by ShareView. It looks like updating the
  support library is causing a crash with `@null` drawables

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -3770,6 +3770,7 @@
     <string name="star_rating">Star Rating</string>
     <string name="show_more">SHOW MORE</string>
     <string name="show_less">SHOW LESS</string>
+    <string name="price_range">Price Range</string>
 
     <!-- Hotel V2 Coupon related -->
     <string name="applied_coupon_message">Coupon applied: You saved %1$s!</string>
