--- a/project/src/voyages/res/values-fr/strings.xml
+++ b/project/src/voyages/res/values-fr/strings.xml
@@ -100,7 +100,7 @@
     <!-- Button text for account creation button -->
     <string name="acct_Create_an_vsc_account">Créer un compte Agence Voyages-SNCF.com</string>
     <!-- Message displayed after a successful create account -->
-    <string name="acct_Welcome_to_vsc">Bienvenue sur Agence Voyages-SNCF.com</string>
+    <string name="acct_Welcome_to_vsc">Bienvenue sur Agence\nVoyages-SNCF.com</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_vsc_account_already_exists">Un compte Agence Voyages-SNCF.com est déjà associé à cette adresse e-mail.</string>
 
